# src/order/order.dto.ts
@@ -1,6 +1,0 @@
-export interface CreateOrderDto {
-  workerId: number;
-  clientId: number;
-  orderStatus: string;
-  orderDescription:string;
-}
